Fix layout issues

--- a/style.css
+++ b/style.css
@@ -188,9 +188,6 @@ input.pass:hover {
 }
 
 #loading_screen {
-    position: absolute;
-    top: 0;
-    left: 0;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.8);
@@ -198,9 +195,13 @@ input.pass:hover {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
     color: white;
     font-size: 20px;
+}
+
+#booting-up_screen {
+    justify-content: space-around;
 }
 
 @font-face {
@@ -214,7 +215,6 @@ input.pass:hover {
     user-select: none;
     display: block;
     position: relative;
-    margin-top: 200px;
 }
 
 .load-status-text {
@@ -329,7 +329,7 @@ input.pass:hover {
 }
 
 .taskbar {
-    position: absolute;
+    position: fixed;
     bottom: 11px;
     width: calc(100% - 20px);
     height: 40px;
